# hypewriter

./: .gitignore  README.md  create-icons.ps1  index.html  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/components/editor/: Editor.vue  ExportModal.vue  FontSelector.vue  FootnotePanel.vue  Toolbar.vue
src/components/editor/extensions/: Bubble.ts  CustomBlockquote.ts  CustomHorizontalRule.ts  Indent.ts  LineHighlight.ts
src/components/sidebar/: Sidebar.vue
src/stores/: project.ts  settings.ts
