[package]
name = "hypewriter"
version = "0.1.0"
description = "A writing tool for authors"
authors = ["you"]
edition = "2021"

[package.metadata.tauri]
# Tauri metadata

[lib]
name = "hypewriter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
font-kit = "0.13"
